[tool.poetry]
name = "grafana-dashboard-migration-tool"
version = "0.1.0"
description = ""
authors = ["Romain Guilmont <romain.guilmont@besedo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.25.0"
regex = "2020.11.13"
pygments-promql = "0.0.9"
prometheus-client = "^0.14.1"
coloredlogs = "^15.0.1"
colorama = "^0.4.6"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
